@@ -65,7 +65,7 @@
 </td>
 <td class=cellinside>2016-04-28
 </td>
-<td class=cellinside>14:00:51
+<td class=cellinside>14:06:04
 
 </td>
 <td class=cellinside><br /> Norbert Mercier, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France), Sebastian Kreutzer,<br /> IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)  <br /> <br /> The underlying Bayesian model based on a contribution by Combes et al., 2015.<br />  R Luminescence Package Team
@@ -80,11 +80,11 @@
 </td>
 <td class=cellinside><br /> Function to analyse IRSAR RF measurements on K-feldspar samples, performed<br /> using the protocol according to Erfurt et al. (2003) and beyond.<br />
 </td>
-<td class=cellinside>0.6.3
+<td class=cellinside>0.6.4
 </td>
-<td class=cellinside>2016-04-27
+<td class=cellinside>2016-04-28
 </td>
-<td class=cellinside>19:18:04
+<td class=cellinside>17:52:51
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)<br />  R Luminescence Package Team
@@ -367,7 +367,7 @@
 </td>
 <td class=cellinside>2016-04-28
 </td>
-<td class=cellinside>12:15:58
+<td class=cellinside>14:06:04
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)<br />  R Luminescence Package Team
@@ -1269,7 +1269,7 @@
 </td>
 <td class=cellinside>2016-04-28
 </td>
-<td class=cellinside>13:54:28
+<td class=cellinside>14:06:04
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France),   Michael Dietze, GFZ Potsdam (Germany)<br />  R Luminescence Package Team
