@@ -1,14 +1,14 @@
 % latex table generated in R 3.4.0 by xtable 1.8-2 package
-% Thu Apr 28 14:03:30 2016
+% Thu Apr 28 18:15:07 2016
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
   \hline
  & Name & Title & Description & Version & m.Date & m.Time & Author \\ 
   \hline
-1 & analyse\_baSAR & Bayesian models (baSAR) applied on luminescence data & $<$br /$>$ This function allows the application of Bayesian models (baSAR) on luminescecence data$<$br /$>$ & 0.1.0 & 2016-04-28 & 14:00:51
+1 & analyse\_baSAR & Bayesian models (baSAR) applied on luminescence data & $<$br /$>$ This function allows the application of Bayesian models (baSAR) on luminescecence data$<$br /$>$ & 0.1.0 & 2016-04-28 & 14:06:04
  & $<$br /$>$ Norbert Mercier, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France), Sebastian Kreutzer,$<$br /$>$ IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)  $<$br /$>$ $<$br /$>$ The underlying Bayesian model based on a contribution by Combes et al., 2015.$<$br /$>$  R Luminescence Package Team \\ 
-  2 & analyse\_IRSAR.RF & Analyse IRSAR RF measurements & $<$br /$>$ Function to analyse IRSAR RF measurements on K-feldspar samples, performed$<$br /$>$ using the protocol according to Erfurt et al. (2003) and beyond.$<$br /$>$ & 0.6.3 & 2016-04-27 & 19:18:04
+  2 & analyse\_IRSAR.RF & Analyse IRSAR RF measurements & $<$br /$>$ Function to analyse IRSAR RF measurements on K-feldspar samples, performed$<$br /$>$ using the protocol according to Erfurt et al. (2003) and beyond.$<$br /$>$ & 0.6.4 & 2016-04-28 & 17:52:51
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
   3 & analyse\_pIRIRSequence & Analyse post-IR IRSL sequences & $<$br /$>$ The function performs an analysis of post-IR IRSL sequences including curve$<$br /$>$ fitting on  RLum.Analysis  objects.$<$br /$>$ & 0.2.0 & 2016-01-18 & 15:07:46
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
@@ -36,7 +36,7 @@
  & $<$br /$>$ Christoph Burow, University of Cologne (Germany)$<$br /$>$  R Luminescence Package Team \\ 
   16 & calc\_CosmicDoseRate & Calculate the cosmic dose rate & $<$br /$>$ This function calculates the cosmic dose rate taking into account the soft-$<$br /$>$ and hard-component of the cosmic ray flux and allows corrections for$<$br /$>$ geomagnetic latitude, altitude above sea-level and geomagnetic field$<$br /$>$ changes.$<$br /$>$ & 0.5.2 & 2015-11-29 & 17:27:48
  & $<$br /$>$ Christoph Burow, University of Cologne (Germany)$<$br /$>$  R Luminescence Package Team \\ 
-  17 & calc\_FadingCorr & Apply a fading correction according to Huntley \& Lamothe (2001) for a given$<$br /$>$ g-value. & $<$br /$>$ This function runs the iterations that are needed to calculate the corrected$<$br /$>$ age including the error for a given g-value according to Huntley \& Lamothe$<$br /$>$ (2001).$<$br /$>$ & 0.3.3 & 2016-04-28 & 12:15:58
+  17 & calc\_FadingCorr & Apply a fading correction according to Huntley \& Lamothe (2001) for a given$<$br /$>$ g-value. & $<$br /$>$ This function runs the iterations that are needed to calculate the corrected$<$br /$>$ age including the error for a given g-value according to Huntley \& Lamothe$<$br /$>$ (2001).$<$br /$>$ & 0.3.3 & 2016-04-28 & 14:06:04
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
   18 & calc\_FastRatio & Calculate the Fast Ratio for CW-OSL curves & $<$br /$>$ Function to calculate the fast ratio of quartz CW-OSL single grain or single $<$br /$>$ aliquot curves after Durcan \& Duller (2011).$<$br /$>$ & 0.1.0 & 2016-04-18 & 12:34:32
  & $<$br /$>$ Georgina King, University of Cologne (Germany)  $<$br /$>$ Julie A. Durcan, University of Oxford (United Kingdom)  $<$br /$>$ Christoph Burow, University of Cologne (Germany)  $<$br /$>$  R Luminescence Package Team \\ 
@@ -122,7 +122,7 @@
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France), Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
   64 & plot\_FilterCombinations & Plot filter combinations along with net transmission window & $<$br /$>$ The function allows to plot transmission windows for different filters. Missing data for specific$<$br /$>$ wavelenghts are automatically interpolated for the given filter data using the function  approx .$<$br /$>$ With that a standardised output is reached and a net transmission window can be shown. $<$br /$>$ & 0.1.0 & 2016-04-12 & 12:58:56
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montagine (France) $<$br /$>$  R Luminescence Package Team \\ 
-  65 & plot\_GrowthCurve & Fit and plot a growth curve for luminescence data (Lx/Tx against dose) & $<$br /$>$ A dose response curve is produced for luminescence measurements using a$<$br /$>$ regenerative protocol.$<$br /$>$ & 1.8.7 & 2016-04-28 & 13:54:28
+  65 & plot\_GrowthCurve & Fit and plot a growth curve for luminescence data (Lx/Tx against dose) & $<$br /$>$ A dose response curve is produced for luminescence measurements using a$<$br /$>$ regenerative protocol.$<$br /$>$ & 1.8.7 & 2016-04-28 & 14:06:04
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France),   Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
   66 & plot\_Histogram & Plot a histogram with separate error plot & $<$br /$>$ Function plots a predefined histogram with an accompanying error plot as$<$br /$>$ suggested by Rex Galbraith at the UK LED in Oxford 2010.$<$br /$>$ & 0.4.4 & 2016-04-08 & 12:43:43
  & $<$br /$>$ Michael Dietze, GFZ Potsdam (Germany),   Sebastian Kreutzer,$<$br /$>$ IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
