@@ -118,7 +118,8 @@
       \itemize{
         \item Add self call to the function, i.e. as input alternatively now a list of \code{RLum.Analysis}
         objects can be provided for a higher efficiency,
-        \item the test parameter \code{intersection_ratio} was wrongly calculated; corrected.
+        \item the test parameter \code{intersection_ratio} was wrongly calculated; corrected,
+        \item correct wrong shift if the option \code{RF_nat.lim} was used.
 
       }
 
