@@ -147,7 +147,9 @@ Changes in version 0.6.0 (May 20th ,2016):
                be provided for a higher efficiency,
 
              • the test parameter ‘intersection_ratio’ was wrongly
-               calculated; corrected.
+               calculated; corrected,
+
+             • correct wrong shift if the option ‘RF_nat.lim’ was used.
 
          • ‘analyse_SAR.CWOSL()’
 
